--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
                 
    
     <a href="https://github.com/Shravan-Padale771" target="_blank" class="media">
-        <img src="/img/Github.png" alt="github" class="media__icon">
+        <img src="img/Github.png" alt="github" class="media__icon">
     </a>
     <a href="mailto:spadale771@gmail.com" class="media">
-        <img src="/img/gmail.png" alt="email" class="media__icon">
+        <img src="img/gmail.png" alt="email" class="media__icon">
     </a>
     
             </div>
