--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
         
         <div class="project">
-            <img src="./img/Odyssey.png" alt="HotelDish" class="project__image">
+            <img src="./img/Odyssey.png" alt="Odyssey" class="project__image">
                 
             <ul class="project__techs">
                 <li class="project__tech">ReactJs</li><li class="project__tech">Tailwind CSS</li>
