--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <div class="container">
 
             <div class="header__inner">
-                <a class="logo" href="/">
+                <a class="logo" href="index.html">
                   
                     <span class="logo__name">Portfolio</span>
                 </a>
@@ -209,7 +209,7 @@
                     <p class="about__description">I’m a Full-Stack developer based in Pune. I can develope responsive websites from scratch and raise them into modern user-friendly web experiences. </p><p class="about__description">Transforming my creativity and knowledge into a websites has been my passion for over a year. I always strive to learn about the newest technologies and frameworks.</p>
                 </div>
 
-                <a href="/aboutme.html" class="button">View all -&gt;</a>
+                <a href="aboutme.html" class="button">View all -&gt;</a>
             </div>
             <img src="./img/hero_logo.png" alt="" class="about__image">
         </section>
