--- a/projects.html
+++ b/projects.html
@@ -36,8 +36,8 @@
         <div class="container">
 
             <div class="header__inner">
-                <a class="logo" href="/">
-                    <!-- <img class="logo__img" src="#" alt="Elias logo"> -->
+                <a class="logo" href="index.html">
+                    
                     <span class="logo__name">Portfolio</span>
                 </a>
                 <div class="header__links">
