--- a/aboutme.html
+++ b/aboutme.html
@@ -36,7 +36,7 @@
         <div class="container">
 
             <div class="header__inner">
-                <a class="logo" href="/">
+                <a class="logo" href="index.html">
                     
                     <span class="logo__name">Portfolio</span>
                 </a>
