--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <section class="projects" id="projects">
             <div class="projects__header">
                 <h2 class="h2">projects</h2>
-                <a class="projects__link" href="/projects.html">View all ~~&gt;</a>
+                <a class="projects__link" href="projects.html">View all ~~&gt;</a>
             </div>
             
             
