--- a/projects.html
+++ b/projects.html
@@ -80,7 +80,7 @@
                     <div class="project__content">
                         <div class="project__name">Odyssey</div>
                         <div class="project__description">Front-end of Odyssey</div>
-                        <div class="project__links"><a href="https://astro-production-a0ed.up.railway.app/" class="button ">Live =&gt;</a><a href="https://github.com/Shravan-Padale771/Memopic.git" class="button ">Github =&gt;</a></div>
+                        <div class="project__links"><a href="https://astro-pr8x.onrender.com/" class="button ">Live =&gt;</a><a href="https://github.com/Shravan-Padale771/Memopic.git" class="button ">Github =&gt;</a></div>
                     </div>
                 </div>    
                         
